// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should have same snapshot when hidden 1`] = `
<DocumentFragment>
  <div
    class="sc-jzJRlG bZoLnt"
  >
    <div
      class="sc-cSHVUG cEKVwh"
    >
      <span
        class="sc-htpNat dwRXzK"
        color="#444"
      >
        Character Details
      </span>
      <div
        class="sc-kAzzGY kXVJzU"
      />
      <footer
        class="sc-chPdSV jAYBc"
      >
        <button
          class="sc-bdVaJa etHrZN"
          color="teal"
          data-testid="button"
        >
          Close
        </button>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should have same snapshot when visible 1`] = `
<DocumentFragment>
  <div
    class="sc-jzJRlG ikDJvP"
  >
    <div
      class="sc-cSHVUG cEKVwh"
    >
      <span
        class="sc-htpNat dwRXzK"
        color="#444"
      >
        Character Details
      </span>
      <div
        class="sc-kAzzGY kXVJzU"
      >
        <span
          class="sc-htpNat jZIyuc"
          color="#444"
        >
          Sample
        </span>
      </div>
      <footer
        class="sc-chPdSV jAYBc"
      >
        <button
          class="sc-bdVaJa etHrZN"
          color="teal"
          data-testid="button"
        >
          Close
        </button>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;
